--- a/calander/stylesheets/main.css
+++ b/calander/stylesheets/main.css
@@ -1,7 +1,6 @@
 /* Reset CSS: from YUI2: Reset CSS */
 html{color:#000;
 	background:#fff; 
-	padding:20px 0;
 	font: 12px/18px "맑은 고딕", "Malgun Gothic", "굴림", "Gulim", Verdana, Arial, Tahoma;
 }
 body,div,dl,dt,dd,ul,ol,li,h1,h2,h3,h4,h5,h6,pre,code,form,fieldset,legend,input,button,textarea,p,blockquote,th,td{margin:0;padding:1px;}
@@ -27,10 +26,10 @@ h2 {font-size:12px; line-height:24px; font-weight:bold;}
 a:hover, a:active {color:#C23700;}
 */
 
-#header{ height:40px; width:99.5%; background-color: #666666; color:#eeff9d;font-size:30px; font-weight:bold; padding-left:10px; padding-top: 5px;}
-#menu_body{height:550px; width:14%; border:1px solid; float:left; text-align: center;}
+#header{ height:60px; width:99.5%; background-color: #666666; color:#eeff9d;font-size:30px; font-weight:bold; padding-left:10px; padding-top: 5px;}
+#menu_body{height:550px; width:18%; border:1px solid; float:left; text-align: center;}
 #menu_hide{height:550px; width:1%; border:1px solid; float:left; text-align: center; }
-#content{height:550px; width:84%; border:1px solid;float:left;}
+#content{height:550px; width:80%; border:1px solid;float:left;}
 #footer{height:20px;  width:99.5%;color: #333333; float: left; border: 1px solid; text-align: center;}
 
 .menu_button{ width:87px;height:30px;background-color:#dddddd;border:1px solid #666666;}
@@ -48,15 +47,26 @@ a:hover, a:active {color:#C23700;}
 #fri{width:14%;}
 #sat{width:14%; color:#0000ff;}
 
+#menu_memo{padding-top: 10px;}
+#menu_check{font-size:15px;line-height: 30px;}
+#menu_check a{text-decoration: none;}
+#menu_check a:visited, a:link{color:black;}
+#menu_check a:hover, a:active{color:black;}
+
 #content_search{padding-left: 10px; padding-top: 10px;}
 .search_text{float:left;}
 .search_button{width:30px; height:22px;}
-#content_navbar{position: absolute;left:40%;}
+#content_navbar{position: absolute;left:43%;}
 .navbar_button{ width:87px;height:30px;background-color:#dddddd;float: left;}
 
 #frame{margin-top: 40px;}
-.week_header{width:100%;}
+.week_header{width:100%; height:40px;}
 .week_header th{text-align: center;border:1px solid black;}
+
+.week_row{width:100%;}
+.week_row tr{height: 70px;}
+.week_row th{border:1px solid black;}
+
 .sun{color:red;}
 .mc_border{ background-color:#666666; height:1px; }
 .mday_col{text-align:center; height:17px; background-color:#eeeeee;}
