--- a/calander/login_jsp/WebContent/stylesheets/login_page.css
+++ b/calander/login_jsp/WebContent/stylesheets/login_page.css
@@ -1,5 +1,8 @@
-#login{width:400px; height:200px; margin: 0 auto;text-align: center;font-size: 70px;font-family: Arial;}
-#id_box{width: 400px;margin: 0 auto;text-align: center;}
+#login{
+	width:400px; height:200px; margin: 0 auto;text-align: center;font-size: 25px;font-family: Arial;
+}
+
+#id_box{width: 400px;margin: 0 auto; text-align: center;}
 #id_box input{height: 30px;}
 #pwd_box{width: 400px;margin: 0 auto;text-align: center;}
 #pwd_box input{height: 30px;}
@@ -7,5 +10,5 @@
 #login_btn input{height: 40px;}
 #join_btn{width:400px;margin: 0 auto;text-align: center;}
 #join_btn input{height: 40px;}
-#join{width:400px; height:100px;margin: 0 auto;padding-top: 100px;text-align: center;font-size: 40px;font-family: Arial;}
+#join{width:300px; height:50px;margin: 0 auto;padding-top: 50px; text-align: center;font-size: 25px;font-family: Arial;}
 #error{width:400px; height:200px; margin: 0 auto;text-align: center;}
