--- a/calander/login_jsp/WebContent/stylesheets/main.css
+++ b/calander/login_jsp/WebContent/stylesheets/main.css
@@ -28,10 +28,18 @@ a:hover, a:active {color:#C23700;}
 #top{height: 15px;text-align: right;color:black;}
 #top a:visited, a:link {color:black;text-decoration:none;}
 #top a:hover, a:active {margin-top:20px;}
-#header{ height:60px; width:99.5%; background-color: #666666; color:#eeff9d;font-size:30px; font-weight:bold; padding-left:10px; padding-top: 5px;}
-#menu_body{height:550px; width:18%; border:1px solid; float:left; text-align: center;}
+#header{ height:70px; width:99.5%; background-color: #99D9EA; color:#ff00ff;font-size:30px; font-weight:bold; padding-left:10px; padding-top: 5px;}
+#cal_images{float:right;}
+#menu_body{height:550px; width:19%; border:1px solid; float:left; text-align: center;}
+#all_schedule{text-align:left;}
+#show_important{text-align:left;}
+#menu_delete{text-align:left;}
+#show_memo{text-align:left;}
+
+
+
 #menu_hide{height:550px; width:1%; border:1px solid; float:left; text-align: center; }
-#content{height:550px; width:80%; border:1px solid;float:left;}
+#content{height:550px; width:79%; border:1px solid; float:right;}
 #footer{height:20px;  width:99.5%;color: #333333; float: left; border: 1px solid; text-align: center;}
 
 .menu_button{ width:87px;height:30px;background-color:#dddddd;border:1px solid #666666;}
@@ -58,8 +66,9 @@ a:hover, a:active {color:#C23700;}
 #content_search{padding-left: 10px; padding-top: 10px;}
 .search_text{float:left;}
 .search_button{width:30px; height:22px;}
-#content_navbar{position: absolute;left:43%;}
-.navbar_button{ width:87px;height:30px;background-color:#dddddd;float: left;}
+#move_month{font-size: 20px; position:absolute; left : 23%;}
+#content_navbar{position: absolute; left:43%;}
+.navbar_button{ width:87px;height:30px;background-color:#dddddd; float: left;}
 
 #frame{margin-top: 40px;}
 .week_header{width:100%; height:40px;}
@@ -73,3 +82,15 @@ a:hover, a:active {color:#C23700;}
 .mc_border{ background-color:#666666; height:1px; }
 .mday_col{text-align:center; height:17px; background-color:#eeeeee;}
 .csfont{color:red;}
+
+/* ↓ make _schedule  css */
+#make_schedule{height:70px;  width:79%;color: #333333; float: left; border: 1px solid;}
+#new_schedule{font-size : 20px;}
+#title{position:absolute; left: 25%; top: 30%; font-size : 20px;}
+.title_box{float : center;}
+
+#time{position:absolute; left: 25%;  top: 40%; font-size : 20px;}
+.time_box{float : }
+#color{position:absolute; left: 25%;  top: 50%; font-size : 20px;}
+
+#schedule_content{position:absolute; left: 25%; top : 60%;  font-size : 20px;}
