--- a/calander/login_jsp/WebContent/stylesheets/main.css
+++ b/calander/login_jsp/WebContent/stylesheets/main.css
@@ -28,8 +28,9 @@ a:hover, a:active {color:#C23700;}
 #top{height: 15px;text-align: right;color:black;}
 #top a:visited, a:link {color:black;text-decoration:none;}
 #top a:hover, a:active {margin-top:20px;}
-#header{ height:70px; width:99.5%; background-color: #99D9EA; color:#ff00ff;font-size:30px; font-weight:bold; padding-left:10px; padding-top: 5px;}
+#header{ height:70px; width:99.5%; background-color: #353535; color:#ffffff;font-size:30px; font-weight:bold; padding-left:10px; padding-top: 5px; border-radius: 10px;}
 #cal_images{float:right;}
+
 #menu_body{height:550px; width:19%; border:1px solid; float:left; text-align: center;}
 #all_schedule{text-align:left;}
 #show_important{text-align:left;}
@@ -84,13 +85,25 @@ a:hover, a:active {color:#C23700;}
 .csfont{color:red;}
 
 /* ↓ make _schedule  css */
-#make_schedule{height:70px;  width:79%;color: #333333; float: left; border: 1px solid;}
-#new_schedule{font-size : 20px;}
-#title{position:absolute; left: 25%; top: 30%; font-size : 20px;}
-.title_box{float : center;}
+#make_schedule{height:70px;  width:79%;color: #333333; float: left; }
+#new_schedule{font-size : 20px; height: 1px color : #dddddd; }
 
-#time{position:absolute; left: 25%;  top: 40%; font-size : 20px;}
+#title{left: 25%; top: 30%; font-size : 20px;}
+.title_box{float : center; padding : 0px;}
+
+#time{font-size : 20px;}
 .time_box{float : }
-#color{position:absolute; left: 25%;  top: 50%; font-size : 20px;}
+#color{font-size : 20px;}
 
-#schedule_content{position:absolute; left: 25%; top : 60%;  font-size : 20px;}
+#schedule_content{font-size : 20px;}
+#write_top{height:30px; width:300px; background-color: #D4F4FA; color:#ffffff;font-size:20px; font-weight:bold;  border-radius: 5px;
+background: rgb(242,245,246); /* Old browsers */
+background: -moz-linear-gradient(top,  rgba(242,245,246,1) 0%, rgba(227,234,237,1) 37%, rgba(200,215,220,1) 100%);
+background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,rgba(242,245,246,1)), color-stop(37%,rgba(227,234,237,1)), color-stop(100%,rgba(200,215,220,1)));
+background: -webkit-linear-gradient(top,  rgba(242,245,246,1) 0%,rgba(227,234,237,1) 37%,rgba(200,215,220,1) 100%); 
+background: -o-linear-gradient(top,  rgba(242,245,246,1) 0%,rgba(227,234,237,1) 37%,rgba(200,215,220,1) 100%);
+background: -ms-linear-gradient(top,  rgba(242,245,246,1) 0%,rgba(227,234,237,1) 37%,rgba(200,215,220,1) 100%);
+background: linear-gradient(to bottom,  rgba(242,245,246,1) 0%,rgba(227,234,237,1) 37%,rgba(200,215,220,1) 100%);
+filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#f2f5f6', endColorstr='#c8d7dc',GradientType=0 );
+
+}
