--- a/calander/login_jsp/.settings/org.eclipse.wst.common.component
+++ b/calander/login_jsp/.settings/org.eclipse.wst.common.component
@@ -2,6 +2,7 @@
     <wb-module deploy-name="Web_Project">
         <wb-resource deploy-path="/" source-path="/WebContent" tag="defaultRootSource"/>
         <wb-resource deploy-path="/WEB-INF/classes" source-path="/src"/>
+        <wb-resource deploy-path="/WEB-INF/classes" source-path="/"/>
         <property name="java-output-path" value="/Web_Project/build/classes"/>
         <property name="context-root" value="Web_Project"/>
     </wb-module>
