--- a/calander/login_jsp/WebContent/stylesheets/main.css
+++ b/calander/login_jsp/WebContent/stylesheets/main.css
@@ -40,7 +40,7 @@ a:hover, a:active {color:#C23700;}
 
 
 #menu_hide{height:550px; width:1%; border:1px solid; float:left; text-align: center; }
-#content{height:550px; width:79%; border:1px solid; float:right;}
+#c_content{height:550px; width:79%; border:1px solid; float:right;}
 #footer{height:20px;  width:99.5%;color: #333333; float: left; border: 1px solid; text-align: center;}
 
 .menu_button{ width:87px;height:30px;background-color:#dddddd;border:1px solid #666666;}
@@ -95,8 +95,12 @@ a:hover, a:active {color:#C23700;}
 .time_box{float : }
 #color{font-size : 20px;}
 
-#schedule_content{font-size : 20px;}
-#write_top{height:30px; width:300px; background-color: #D4F4FA; color:#ffffff;font-size:20px; font-weight:bold;  border-radius: 5px;
+#schedule_content{font-size : 20px; vertical-align:top; }
+#content{}
+#save_schedule{text-align:center;}
+
+#write_top{height:30px; width:300px; background-color: #D4F4FA; color:#000000;font-size:20px; font-weight:bold;  border-radius: 5px;
+padding-top:10px; padding-left:10px;
 background: rgb(242,245,246); /* Old browsers */
 background: -moz-linear-gradient(top,  rgba(242,245,246,1) 0%, rgba(227,234,237,1) 37%, rgba(200,215,220,1) 100%);
 background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,rgba(242,245,246,1)), color-stop(37%,rgba(227,234,237,1)), color-stop(100%,rgba(200,215,220,1)));
@@ -107,3 +111,28 @@ background: linear-gradient(to bottom,  rgba(242,245,246,1) 0%,rgba(227,234,237,
 filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#f2f5f6', endColorstr='#c8d7dc',GradientType=0 );
 
 }
+
+
+/* delete schedule css */
+#delete_menu{
+
+background: rgb(242,245,246); /* Old browsers */
+background: -moz-linear-gradient(top,  rgba(242,245,246,1) 0%, rgba(227,234,237,1) 37%, rgba(200,215,220,1) 100%);
+background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,rgba(242,245,246,1)), color-stop(37%,rgba(227,234,237,1)), color-stop(100%,rgba(200,215,220,1)));
+background: -webkit-linear-gradient(top,  rgba(242,245,246,1) 0%,rgba(227,234,237,1) 37%,rgba(200,215,220,1) 100%); 
+background: -o-linear-gradient(top,  rgba(242,245,246,1) 0%,rgba(227,234,237,1) 37%,rgba(200,215,220,1) 100%);
+background: -ms-linear-gradient(top,  rgba(242,245,246,1) 0%,rgba(227,234,237,1) 37%,rgba(200,215,220,1) 100%);
+background: linear-gradient(to bottom,  rgba(242,245,246,1) 0%,rgba(227,234,237,1) 37%,rgba(200,215,220,1) 100%);
+filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#f2f5f6', endColorstr='#c8d7dc',GradientType=0 );
+
+}
+.yes_button{ font-size: 15px; position: absolute; left : 37%;}
+.no_button{ font-size: 15px; position: absolute; left : 47%;}
+#delete_message{ font-size : 20px; text-align : center;}
+
+#delete_time{ font-size : 18px; text-align : center;}
+
+
+
+/* show memo  css */
+#memo_content{width: 79%; height:550px; border:1px solid; float:right;}
