--- a/calander/login_jsp/.settings/org.eclipse.wst.common.component
+++ b/calander/login_jsp/.settings/org.eclipse.wst.common.component
@@ -1,9 +1,8 @@
 <?xml version="1.0" encoding="UTF-8"?><project-modules id="moduleCoreId" project-version="1.5.0">
-    <wb-module deploy-name="Web_Project">
+    <wb-module deploy-name="HCPcalendar">
         <wb-resource deploy-path="/" source-path="/WebContent" tag="defaultRootSource"/>
         <wb-resource deploy-path="/WEB-INF/classes" source-path="/src"/>
-        <wb-resource deploy-path="/WEB-INF/classes" source-path="/"/>
-        <property name="java-output-path" value="/Web_Project/build/classes"/>
-        <property name="context-root" value="Web_Project"/>
+        <property name="context-root" value="HCPcalendar"/>
+        <property name="java-output-path" value="/HCPcalendar/build/classes"/>
     </wb-module>
 </project-modules>
