--- a/calander/login_jsp/WebContent/stylesheets/main.css
+++ b/calander/login_jsp/WebContent/stylesheets/main.css
@@ -32,7 +32,7 @@ a:hover, a:active {color:#C23700;}
 #cal_images{float:right;}
 #header-title{color: white;}
 
-#menu_body{height:550px; width:19%; border:1px solid; float:left; text-align: center;}
+#menu_body{height:550px; width:19%; border:1px solid; float:left; text-align: center; background-color : #ffffff;}
 #all_schedule{text-align:left;}
 #show_important{text-align:left;}
 #menu_delete{text-align:left;}
@@ -40,9 +40,9 @@ a:hover, a:active {color:#C23700;}
 
 
 
-#menu_hide{height:550px; width:1%; border:1px solid; float:left; text-align: center; }
+#menu_hide{height:550px; width:1%; border:1px solid; float:left; text-align: center; background-color : #ffffff;}
 #c_content{height:550px; width:79%; border:1px solid; float:right;}
-#footer{height:20px;  width:99.5%;color: #333333; float: left; border: 1px solid; text-align: center;}
+#footer{bottom: 80%;height:20px;  width:99.5%;color: #333333; float: left; border: 1px solid; text-align: center;}
 
 .menu_button{ width:87px;height:30px;background-color:#dddddd;border:1px solid #666666;}
 #menu_calander{width:100%; border:0px;}
@@ -93,7 +93,7 @@ a:hover, a:active {color:#C23700;}
 .title_box{float : center; padding : 0px;}
 
 #time{font-size : 20px;}
-.time_box{float : }
+.time_box{text-align:center; }
 #color{font-size : 20px;}
 
 #schedule_content{font-size : 20px; vertical-align:top; }
@@ -116,7 +116,19 @@ filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#f2f5f6', end
 
 /* delete schedule css */
 #delete_menu{
+float : left; width:79%; height: 100%;
+}
+.yes_button{ font-size: 15px;left : 55%;}
+.no_button{ font-size: 15px;left : 63%;}
 
+.one_button{ font-size: 15px; position: absolute; left :28%;}
+.two_button{ font-size: 15px;position: absolute;left :38%; }
+.three_button{ font-size: 15px; position: absolute;left :48%;}
+.four_button{ font-size: 15px; position: absolute; left :58%;}
+
+#delete_message{position:relative;  width: 395px;  font-size : 20px; text-align : center;
+
+padding-bottom:25px;
 background: rgb(242,245,246); /* Old browsers */
 background: -moz-linear-gradient(top,  rgba(242,245,246,1) 0%, rgba(227,234,237,1) 37%, rgba(200,215,220,1) 100%);
 background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,rgba(242,245,246,1)), color-stop(37%,rgba(227,234,237,1)), color-stop(100%,rgba(200,215,220,1)));
@@ -127,19 +139,16 @@ background: linear-gradient(to bottom,  rgba(242,245,246,1) 0%,rgba(227,234,237,
 filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#f2f5f6', endColorstr='#c8d7dc',GradientType=0 );
 
 }
-.yes_button{ font-size: 15px; position: absolute; left : 37%;}
-.no_button{ font-size: 15px; position: absolute; left : 47%;}
-
-.one_button{ font-size: 15px; position: absolute; left :28%;}
-.two_button{ font-size: 15px;position: absolute;left :38%; }
-.three_button{ font-size: 15px; position: absolute;left :48%;}
-.four_button{ font-size: 15px; position: absolute; left :58%;}
-
-#delete_message{ font-size : 20px; text-align : center;}
 
 #delete_time{ font-size : 18px; text-align : center;}
-
+#delete_border{border : solid 1px; width: 400px; position:relative; left:30%;}
 
 
 /* show memo  css */
 #memo_content{width: 79%; height:550px; border:1px solid; float:right;}
+#img_memo{
+	background: url(../images/img_memo.png);
+	width : 283px; height: 190px;
+	
+}
+#memod_btn{algint : left;}
