--- a/calander/WebContent/stylesheets/main.css
+++ b/calander/WebContent/stylesheets/main.css
@@ -126,9 +126,9 @@ float : left; width:79%; height: 100%;
 .three_button{ font-size: 15px; position: absolute;left :48%;}
 .four_button{ font-size: 15px; position: absolute; left :58%;}
 
-#delete_message{position:relative;  width: 395px;  font-size : 20px; text-align : center;
+#delete_message{position:relative;  width: 367px;  font-size : 20px; text-align : center;
 
-padding-bottom:25px;
+padding-bottom:40px;
 background: rgb(242,245,246); /* Old browsers */
 background: -moz-linear-gradient(top,  rgba(242,245,246,1) 0%, rgba(227,234,237,1) 37%, rgba(200,215,220,1) 100%);
 background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,rgba(242,245,246,1)), color-stop(37%,rgba(227,234,237,1)), color-stop(100%,rgba(200,215,220,1)));
@@ -139,11 +139,23 @@ background: linear-gradient(to bottom,  rgba(242,245,246,1) 0%,rgba(227,234,237,
 filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#f2f5f6', endColorstr='#c8d7dc',GradientType=0 );
 
 }
+#delete_message2{position:relative;  width: 399px;  font-size : 20px; text-align : center;
 
+padding-bottom:40px;
+background: rgb(242,245,246); /* Old browsers */
+background: -moz-linear-gradient(top,  rgba(242,245,246,1) 0%, rgba(227,234,237,1) 37%, rgba(200,215,220,1) 100%);
+background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,rgba(242,245,246,1)), color-stop(37%,rgba(227,234,237,1)), color-stop(100%,rgba(200,215,220,1)));
+background: -webkit-linear-gradient(top,  rgba(242,245,246,1) 0%,rgba(227,234,237,1) 37%,rgba(200,215,220,1) 100%); 
+background: -o-linear-gradient(top,  rgba(242,245,246,1) 0%,rgba(227,234,237,1) 37%,rgba(200,215,220,1) 100%);
+background: -ms-linear-gradient(top,  rgba(242,245,246,1) 0%,rgba(227,234,237,1) 37%,rgba(200,215,220,1) 100%);
+background: linear-gradient(to bottom,  rgba(242,245,246,1) 0%,rgba(227,234,237,1) 37%,rgba(200,215,220,1) 100%);
+filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#f2f5f6', endColorstr='#c8d7dc',GradientType=0 );
+
+}
 #delete_time{ font-size : 18px; text-align : center;}
 #delete_border{border : solid 1px; width: 400px; position:relative; left:30%;}
 
-#aniv {text-align: bottom;}
+
 /* show memo  css */
 #memo_content{width: 79%; height:550px; border:1px solid; float:right;}
 #img_memo{
@@ -152,3 +164,21 @@ filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#f2f5f6', end
 	
 }
 #memod_btn{algint : left;}
+
+
+#choice_menu{
+	position:relative;  width: 370px;  font-size : 20px; text-align : center;
+
+padding-bottom:25px;
+background: rgb(242,245,246); /* Old browsers */
+background: -moz-linear-gradient(top,  rgba(242,245,246,1) 0%, rgba(227,234,237,1) 37%, rgba(200,215,220,1) 100%);
+background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,rgba(242,245,246,1)), color-stop(37%,rgba(227,234,237,1)), color-stop(100%,rgba(200,215,220,1)));
+background: -webkit-linear-gradient(top,  rgba(242,245,246,1) 0%,rgba(227,234,237,1) 37%,rgba(200,215,220,1) 100%); 
+background: -o-linear-gradient(top,  rgba(242,245,246,1) 0%,rgba(227,234,237,1) 37%,rgba(200,215,220,1) 100%);
+background: -ms-linear-gradient(top,  rgba(242,245,246,1) 0%,rgba(227,234,237,1) 37%,rgba(200,215,220,1) 100%);
+background: linear-gradient(to bottom,  rgba(242,245,246,1) 0%,rgba(227,234,237,1) 37%,rgba(200,215,220,1) 100%);
+filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#f2f5f6', endColorstr='#c8d7dc',GradientType=0 );
+	
+	
+	
+}
